--- a/les2-redux/task1/package.json
+++ b/les2-redux/task1/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "core-js": "^3.18.1",
     "moment": "^2.29.4",
     "prop-types": "^15.7.2",
