--- a/les6-middleware/task2/package.json
+++ b/les6-middleware/task2/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.14.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   }
 }
